# numopt

./: .gitattributes  .gitignore  AbstractModel.h  CMakeLists.txt  DataIterator.cpp  DataIterator.h  IndexData.cpp  IndexData.h  LccrfDataType.h  LccrfModel.cpp  LccrfModel.h  ModelData.cpp  ModelData.h  README.md  RunModel.cpp  RunModel.h  backtrack.m  cmdline.cpp  cmdline.h  datacache.cpp  dataop.cpp  dataop.h  functest.m  lbfgs.m  lbfgsUpdate.m  linearmodel.cpp  linearmodel.h  linearmodelopt.cpp  linearmodelopt.h  logisticRegression.lua  logistic_regression.cpp  logisticmodel.cpp  logisticmodel.h  logitloss.m  lossfunc.cpp  lossfunc.h  mltools.cpp  model.cpp  model.h  opt.cpp  (+18 more)
src/: AbstractModel.h  CMakeLists.txt  DataIterator.cpp  DataIterator.h  IndexData.h  LccrfModel.cpp  ModelData.cpp  RunModel.h  cmdline.cpp  dataop.cpp  dataop.h  linearmodel.cpp  linearmodel.h  linearmodelopt.h  lossfunc.h  util.cpp
src/app/linear_method/: CMakeLists.txt
src/app/linear_method/src/: main.cpp
src/cmake/Modules/: Findsnappy.cmake
src/crfeaturize/: CMakeLists.txt
src/crfeaturize/src/: crfeaturize.cpp
src/crflib/: CMakeLists.txt
src/crflib/include/crflib/: crftemplate.h  lccrfeaturizer.h
src/crflib/src/: crftemplate.cpp  lccrfeaturizer.cpp
src/crflib/test/: crf_test.cpp
src/data/: CMakeLists.txt
src/data/include/data/: common.h  info_parser.h  slot_reader.h  stream_reader.h  text_parser.h
src/data/proto/: .dataconfig.proto.swp  .example.proto.swp  dataconfig.pb.cc  dataconfig.pb.h  example.pb.h
src/data/src/: common.cpp  info_parser.cpp  slot_reader.cpp  stream_reader.cpp  text_parser.cpp
src/data/test/: slot_reader_test.cpp  stream_reader_test.cpp  text_parser_test.cpp
src/dataop/: CMakeLists.txt  vocabulary.cpp  vocabulary.h
src/dataop/include/dataop/: DataIterator.h  IndexData.h  ModelData.h  dataop.h  vocabulary.h
src/dataop/src/: DataIterator.cpp  IndexData.cpp  ModelData.cpp  dataop.cpp  vocabulary.cpp
src/dataop/test/: test_dataop.cpp
src/filter/: CMakeLists.txt
src/filter/include/filter/: add_noise.h  compressing.h  filter.h  fixing_float.h  frequency_filter.h  key_caching.h  sparse_filter.h
src/filter/src/: filter.cpp
src/filter/test/: test_filter.cpp
src/lccrf/: crfeaturize.cpp  crftemplate.cpp  lccrfeaturizer.cpp
src/learner/: CMakeLists.txt
src/learner/include/learner/: bcd.h  sgd.h  workload_pool.h
src/learner/src/: bcd.cpp  sgd.cpp  workload_pool.cpp
src/learner/test/: test_learner.cpp
src/mltools/: CMakeLists.txt
src/mltools/include/mltools/: RunModel.h
src/mltools/src/: RunModel.h  mltools.cpp
src/model/: CMakeLists.txt
src/model/include/model/: AbstractModel.h  LccrfDataType.h  LccrfModel.h  linearmodel.h
src/model/src/: LccrfModel.cpp  linearmodel.cpp
src/nn/: CMakeLists.txt  activatelayer.cpp  cnn.cpp  crossentropy.h  dropout.cpp  embedding.cpp  linearlayer.cpp  nnmacros.h  nnmodule.h  nnquery.h  nnsequencedata.h  rnn.h  textconv.cpp  textpooling.cpp
src/nn/include/nn/: activatelayer.h  cnn.h  crossentropy.h  dropout.h  embedding.h  embeddingsum.h  linearlayer.h  lossbase.h  nnmacros.h  nnmodule.h  nnquery.h  nnsequencedata.h  rnn.h  textconv.h  textpooling.h  vectorsum.h
src/nn/src/: activatelayer.cpp  cnn.cpp  crossentropy.cpp  dropout.cpp  embedding.cpp  embeddingsum.cpp  linearlayer.cpp  textconv.cpp  textpooling.cpp  vectorsum.cpp
src/optimizer/: CMakeLists.txt  cg.cpp  lbfgs.h  linesearch.cpp  opt.cpp  opt.h  optimfactory.h  proximalgd.h  sdca.cpp  sgd.cpp  sgd.h  svrg.cpp
src/optimizer/include/optimizer/: cg.h  lbfgs.h  linesearch.h  opt.h  optimfactory.h  proximalgd.h  sdca.h  sgd.h  svrg.h
src/optimizer/src/: cg.cpp  lbfgs.cpp  linesearch.cpp  opt.cpp  optimfactory.cpp  proximalgd.cpp  sdca.cpp  sgd.cpp  svrg.cpp
src/parameter/: CMakeLists.txt
src/parameter/include/parameter/: kv_layer.h  kv_map.h  kv_vector.h  parameter.h
src/parameter/src/: parameter.cpp
src/parameter/test/: kv_layer_perf_ps.cpp  kv_layer_ps.cpp  kv_map_perf_ps.cpp  kv_map_ps.cpp  kv_vector_buffer_ps.cpp  kv_vector_perf_ps.cpp  kv_vector_ps.cpp  test_parameter.cpp
src/proto/: CMakeLists.txt  assign_op.proto  bcd.proto  dataconfig.proto  example.proto  filter.proto  heartbeat.proto  linear.proto  matrix.proto  node.proto  param.proto  range.proto  sgd.proto  task.proto  workload.proto
src/system/: CMakeLists.txt
src/system/include/system/: assigner.h  customer.h  env.h  executor.h  heartbeat_info.h  manager.h  message.h  monitor.h  postoffice.h  remote_node.h  sysutil.h  van.h
src/system/src/: assigner.cpp  env.cpp  executor.cpp  heartbeat_info.cpp  manager.cpp  message.cpp  postoffice.cpp  remote_node.cpp  van.cpp
src/system/test/: hello_ps.cpp  run_van.cpp  run_van_util.cpp  run_van_util.h  run_van_worker.cpp  test_message.cpp  test_van.cpp
src/test/: CMakeLists.txt  lccrf_test.cpp  text_data.cpp
src/test/src/: lccrf_test.cpp  test_main.cpp
src/textfeaturize/: CMakeLists.txt
src/textfeaturize/src/: txtfeat.cpp
src/util/: CMakeLists.txt  stringop.cpp
src/util/include/util/: assign_op.h  barrier.h  bitmap.h  cedar.h  cmdline.h  common.h  crc32c.h  dense_matrix.h  dynamic_array.h  dynamic_array_impl.h  evaluation.h  file.h  filelinereader.h  integral_types.h  local_machine.h  localizer.h  matrix.h  parallel_ordered_match.h  parallel_sort.h  parameter.h  producer_consumer.h  range.h  recordio.h  resource_usage.h  sparse_matrix.h  stringop.h  threadpool.h  threadsafe_limited_queue.h  threadsafe_queue.h  typedef.h  util.h
src/util/proto/: matrix.pb.cc  matrix.proto  range.pb.cc  range.pb.h
src/util/src/: cmdline.cpp  crc32c.cpp  file.cpp  filelinereader.cpp  lossfunc.cpp  murmurhash3.cpp  parameter.cpp  recordio.cpp  stringop.cpp  threadpool.cpp  util.cpp
src/util/test/: test_misc.cpp  test_stringop.cpp
src/utils/: CMakeLists.txt
src/utils/include/util/: barrier.h  cedarpp.h  cmdline.h  common.h  countmin.h  dynamic_array.h  evaluation.h  lossfunc.h  macro.h  (+12 more)
src/utils/src/: file.cpp  filelinereader.cpp  lossfunc.cpp  parameter.cpp  stringop.cpp  util.cpp
src/utils/test/: test_misc.cpp
(+93 files in other folders)
